--- a/mn/itservices.html
+++ b/mn/itservices.html
@@ -15,45 +15,8 @@
 <body class="menu-position-side menu-side-left full-screen with-content-panel">
 <div class="all-wrapper with-side-panel solid-bg-all">
 
-<div aria-hidden="true" class="onboarding-modal modal fade animated show-on-load" role="dialog" tabindex="-1">
 
-<div class="modal-dialog modal-centered" role="document">
-<div class="modal-content text-center">
-<button aria-label="Close" class="close" data-dismiss="modal" type="button">
-<span class="close-label">Skip Intro</span><span class="os-icon os-icon-close">
-</span></button>
-<div class="onboarding-slider-w"><div class="onboarding-slide"><br><br>
-<div class="onboarding-media"><img alt="" src="images/mnlogo.png" width="200px">
-</div>
-
-<div class="onboarding-content with-gradient"><br><br>
-<h4 class="onboarding-title">Welcome to Murugan Networks</h4>
-<div class="onboarding-text">This is an example of a multistep onboarding screen, you can use it to introduce your customers to your app, or collect additional information from them before they start using your app.</div>
-</div>
-
-</div>
-
-<div class="onboarding-slide">
-<div class="onboarding-media"><br><br>
-<img alt="" src="images/mnlogo.png" width="200px"></div>
-<div class="onboarding-content with-gradient">
-<h4 class="onboarding-title">Request Your Ticket Here</h4>
-<div class="onboarding-text">This is an example of a multistep onboarding screen, you can use it to introduce your customers to your app, or collect additional information from them before they start using your app.</div>
-
-</div></div>
-<div class="onboarding-slide"><div class="onboarding-media"><br><br><img alt="" src="images/mnlogo.png" width="200px"></div><div class="onboarding-content with-gradient"><h4 class="onboarding-title">Murugan Networks App Features</h4>
-<ul class="features-list">
-<li>Quick Response</li>
-<li>Immediate Action</li>
-<li>Quality Service</li>
-<li>Best Engineers</li>
-<li>Total Support</li>
-</ul>
-
-<div class="row"><div class="col-sm-6">
-</div><div class="col-sm-6">
-</div></div></div></div></div></div></div></div>
-<div class="layout-w"><!--------------------
+<div class="search-with-suggestions-w"><div class="search-with-suggestions-modal"><div class="element-search"><input class="search-suggest-input" placeholder="Start typing to search..." type="text"><div class="close-search-suggestions"><i class="os-icon os-icon-x"></i></div></input></div><div class="search-suggestions-group"><div class="ssg-header"><div class="ssg-icon"><div class="os-icon os-icon-box"></div></div><div class="ssg-name">Projects</div><div class="ssg-info">24 Total</div></div><div class="ssg-content"><div class="ssg-items ssg-items-boxed"><a class="ssg-item" href="users_profile_big.html"><div class="item-media" style="background-image: url(img/company6.png)"></div><div class="item-name">Integ<span>ration</span> with API</div></a><a class="ssg-item" href="users_profile_big.html"><div class="item-media" style="background-image: url(img/company7.png)"></div><div class="item-name">Deve<span>lopm</span>ent Project</div></a></div></div></div><div class="search-suggestions-group"><div class="ssg-header"><div class="ssg-icon"><div class="os-icon os-icon-users"></div></div><div class="ssg-name">Customers</div><div class="ssg-info">12 Total</div></div><div class="ssg-content"><div class="ssg-items ssg-items-list"><a class="ssg-item" href="users_profile_big.html"><div class="item-media" style="background-image: url(img/avatar1.jpg)"></div><div class="item-name">John Ma<span>yer</span>s</div></a><a class="ssg-item" href="users_profile_big.html"><div class="item-media" style="background-image: url(img/avatar2.jpg)"></div><div class="item-name">Th<span>omas</span> Mullier</div></a><a class="ssg-item" href="users_profile_big.html"><div class="item-media" style="background-image: url(img/avatar3.jpg)"></div><div class="item-name">Kim C<span>olli</span>ns</div></a></div></div></div><div class="search-suggestions-group"><div class="ssg-header"><div class="ssg-icon"><div class="os-icon os-icon-folder"></div></div><div class="ssg-name">Files</div><div class="ssg-info">17 Total</div></div><div class="ssg-content"><div class="ssg-items ssg-items-blocks"><a class="ssg-item" href="#"><div class="item-icon"><i class="os-icon os-icon-file-text"></i></div><div class="item-name">Work<span>Not</span>e.txt</div></a><a class="ssg-item" href="#"><div class="item-icon"><i class="os-icon os-icon-film"></i></div><div class="item-name">V<span>ideo</span>.avi</div></a><a class="ssg-item" href="#"><div class="item-icon"><i class="os-icon os-icon-database"></i></div><div class="item-name">User<span>Tabl</span>e.sql</div></a><a class="ssg-item" href="#"><div class="item-icon"><i class="os-icon os-icon-image"></i></div><div class="item-name">wed<span>din</span>g.jpg</div></a></div><div class="ssg-nothing-found"><div class="icon-w"><i class="os-icon os-icon-eye-off"></i></div><span>No files were found. Try changing your query...</span></div></div></div></div></div><div class="layout-w"><!--------------------
 START - Mobile Menu
 -------------------->
 <div class="menu-mobile menu-activated-on-click color-scheme-dark"><div class="mm-logo-buttons-w"><a class="mm-logo" href="index.html"><img src="images/logo-big.png"><span>Murugan Networks</span></a><div class="mm-buttons"><div class="content-panel-open">
@@ -110,36 +73,65 @@ END - Breadcrumbs
 <div class="col-sm-12">
 <div class="element-wrapper">
 
-<h6 class="element-header">Dashboard</h6>
+<h6 class="element-header">IT Services</h6>
 <div class="element-box-tp">
 <div class="profile-tile">
 <ul style="padding-left: 20px;">
-<a style="align:left;width: 130px;" class="profile-tile-box" href="itservices.html">
-<div class="pt-avatar-w"><img alt="" src="images/icons/amc.png"></div>
-<div class="pt-user-name"><strong>IT Services</strong></div></a>
+<a style="align:left;width: 130px;" class="profile-tile-box"  href="computer.html">
+<div class="pt-avatar-w"><img alt="" src="images/icons/computer.png"></div>
+<div class="pt-user-name"><strong>Computer</strong></div></a>
 </ul>
 <ul style="padding-left: 20px;">
 
-<a style="align:right;width: 130px;" class="profile-tile-box" href="itsales.html">
-<div class="pt-avatar-w"><img alt="" src="images/icons/sales.png"></div>
-<div class="pt-user-name"><strong>IT Sales</strong></div></a>
+<a style="align:right;width: 130px;" class="profile-tile-box" href="laptop.html">
+<div class="pt-avatar-w"><img alt="" src="images/icons/laptop.png"></div>
+<div class="pt-user-name"><strong>Laptop</strong></div></a>
 </ul>
 </div>
 <div class="profile-tile">
 <ul style="padding-left: 20px;">
-<a style="align:left;width: 130px;" class="profile-tile-box" href="rental.html">
-<div class="pt-avatar-w"><img alt="" src="images/icons/rental.png"></div>
-<div class="pt-user-name"><strong>Rental</strong></div></a>
+<a style="align:left;width: 130px;" class="profile-tile-box" href="computer.html">
+<div class="pt-avatar-w"><img alt="" src="images/icons/cctv.png"></div>
+<div class="pt-user-name"><strong>CCTV</strong></div></a>
 </ul>
 <ul style="padding-left: 20px;">
 
-<a style="align:right;width: 130px;" class="profile-tile-box" href="enquiry.html">
-<div class="pt-avatar-w"><img alt="" src="images/icons/enquiry.png"></div>
-<div class="pt-user-name"><strong>Enquiry</strong></div></a>
+<a style="align:right;width: 130px;" class="profile-tile-box" href="computer.html">
+<div class="pt-avatar-w"><img alt="" src="images/icons/networks.png"></div>
+<div class="pt-user-name"><strong>Networks</strong></div></a>
 </ul>
 </div>
 
+<div class="profile-tile">
 
+<ul style="padding-left: 20px;">
+
+<a style="align:right;width: 130px;" class="profile-tile-box" href="computer.html">
+<div class="pt-avatar-w"><img alt="" src="images/icons/server.png"></div>
+<div class="pt-user-name"><strong>Server System</strong></div></a>
+</ul>
+<ul style="padding-left: 20px;">
+
+<a style="align:right;width: 130px;" class="profile-tile-box" href="computer.html">
+<div class="pt-avatar-w"><img alt="" src="images/icons/access.png"></div>
+<div class="pt-user-name"><strong>Access System</strong></div></a>
+</ul>
+</div>
+<div class="profile-tile">
+
+<ul style="padding-left: 20px;">
+
+<a style="align:right;width: 130px;" class="profile-tile-box" href="computer.html">
+<div class="pt-avatar-w"><img alt="" src="images/icons/bio.png"></div>
+<div class="pt-user-name"><strong>Biometric</strong></div></a>
+</ul>
+<ul style="padding-left: 20px;">
+
+<a style="align:right;width: 130px;" class="profile-tile-box" href="computer.html">
+<div class="pt-avatar-w"><img alt="" src="images/icons/fire.png"></div>
+<div class="pt-user-name"><strong>Fire Alarm</strong></div></a>
+</ul>
+</div>
 
 
 </div>
@@ -149,8 +141,8 @@ END - Breadcrumbs
 
 
 </div>
-<br><br><br><br><br><br><br><br><br>
-</div></div></div></div><a href="tel:+919097631211"><div class="floated-chat-btn"><i style="color:#fdfeff;" class="os-icon os-icon-phone"></i><span>Call Us</span></div></a><!--------------------
+
+</div></div></div></div><div class="floated-chat-btn"><a href="tel:+919097631211"><i style="color:#fdfeff;" class="os-icon os-icon-phone"></i><span>Call Us</span></a></div><!--------------------
 
 
 
