--- a/mn/tickets.html
+++ b/mn/tickets.html
@@ -18,24 +18,26 @@
 
 <div class="layout-w"><!--------------------
 START - Mobile Menu
---------------------><div class="menu-mobile menu-activated-on-click color-scheme-dark"><div class="mm-logo-buttons-w"><a class="mm-logo" href="index.html"><img src="images/logo-big.png"><span>Murugan Networks</span></a><div class="mm-buttons"><div class="content-panel-open">
+-------------------->
+<div class="menu-mobile menu-activated-on-click color-scheme-dark"><div class="mm-logo-buttons-w"><a class="mm-logo" href="index.html"><img src="images/logo-big.png"><span>Murugan Networks</span></a><div class="mm-buttons"><div class="content-panel-open">
 </div><div class="mobile-menu-trigger"><div class="os-icon os-icon-hamburger-menu-1"></div></div></div></div>
 <div class="menu-and-user"><div class="logged-user-w"><div class="avatar-w"><img alt="" src="images/icon.png"></div><div class="logged-user-info-w"><div class="logged-user-name">Murugan</div><div class="logged-user-role">Customer</div></div></div><!--------------------
 START - Mobile Menu List
 --------------------><ul class="main-menu">
 <li class="has-menu"><a href="dashboard.html"><div class="icon-w"><div class="os-icon os-icon-layout"></div></div><span>Home</span></a></li>
 
+<li class="has-menu"><a href="itservices.html"><div class="icon-w"><div class="os-icon os-icon-calendar-time"></div></div><span>IT Services</span></a></li>
+
+<li class="has-menu"><a href="itsales.html"><div class="icon-w"><div class="os-icon os-icon-wallet-loaded"></div></div><span>IT Sales</span></a></li>
 
 <li class="has-sub-menu"><a href="#"><div class="icon-w"><div class="os-icon os-icon-others-43"></div></div><span>Tickets</span></a>
 <ul class="sub-menu">
-<li><a href="newtickets.html">New Tickets</a></li>
-<li><a href="activetickets.html">Active Tickets <strong class="badge badge-success">Active</strong></a></li>
-<li><a href="pastickets.html">Past Tickets</a></li>
+<li><a href="dashboard.html">New Tickets</a></li>
+<li><a href="tickets.html">Active Tickets <strong class="badge badge-success">Active</strong></a></li>
 
 </ul></li>
-<li class="has-menu"><a href="sales.html"><div class="icon-w"><div class="os-icon os-icon-wallet-loaded"></div></div><span>Sales</span></a></li>
-<li class="has-menu"><a href="amc.html"><div class="icon-w"><div class="os-icon os-icon-calendar-time"></div></div><span>AMC</span></a></li>
 <li class="has-menu"><a href="enquiry.html"><div class="icon-w"><div class="os-icon os-icon-agenda-1"></div></div><span>Enquiry</span></a></li>
+<li class="has-menu"><a href="rental.html"><div class="icon-w"><div class="os-icon os-icon-agenda-1"></div></div><span>Rental</span></a></li>
 <li class="has-menu"><a href="login.html"><div class="icon-w"><div class="os-icon os-icon-signs-11"></div></div><span>Logout</span></a></li>
 
 
@@ -66,17 +68,13 @@ END - Breadcrumbs
 -------------------->
 
 <div class="content-i">
-<div class="content-box" style="align:center">
-<div class="support-index">
-<div>
+<div class="content-box">
+<div class="support-index" style="align:center">
+<div style="align:center;">
 <div class="support-tickets-header"><div class="tickets-control"><h5>Tickets</h5>
 </div>
-<div class="tickets-filter">
-<div class="form-group mr-3">
-<label class="d-none d-md-inline-block mr-2">Status</label><select class="form-control-sm"><option>Closed</option><option>Open</option><option>Pending</option></select></div>
-<div class="form-group mr-1"><label class="d-none d-md-inline-block mr-2">Agent</label><select class="form-control-sm"><option>Shanmuga Vel</option><option>Dilip</option><option>Kumar</option></select></div>
-
-</div></div>
+</div>
+<a href="ticketdetail.html">
 <div class="support-ticket" style="width:320px;align:center">
 <div class="st-meta">
 <div class="badge badge-success-inverted">Active</div>
@@ -91,6 +89,7 @@ END - Breadcrumbs
 <div class="ticket-description">Engineer : <a href="tel:919087612211">Shanmuga Vel</a></div></div></div>
 <div class="st-foot"> <span class="label">Updated:</span><span class="value">24-08-2018</span></div>
 </div>
+</a>
 <div class="support-ticket" style="width: 320px;align:center">
 <div class="st-meta">
 <div class="badge badge-danger-inverted">Closed</div>
@@ -123,7 +122,8 @@ END - Breadcrumbs
 </div>
 </div>
 
-</div></div></div></div><!--------------------
+</div></div></div></div>
+<div class="floated-chat-btn"><a href="tel:+919097631211"><i style="color:#fdfeff;" class="os-icon os-icon-phone"></i><span>Call Us</span></a></div><!--------------------
 
 
 
